--- a/front_angular/src/app/git-hub/git-hub.page.html
+++ b/front_angular/src/app/git-hub/git-hub.page.html
@@ -95,7 +95,7 @@
     </ion-item>
   </div>
 
-  <app-bar-data></app-bar-data>
+  <app-bar-data [contributors]="infoRepo.contributions"></app-bar-data>
 </ion-content>
 
 <ion-footer>
