UPDATE: include references

--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -78,9 +78,20 @@
               </div>
               <div id="cards_experiencia" *ngIf="experience_call === 'reference'">
                 <ion-card class="card_experiencia">
-                  <ion-card-title>Nombre</ion-card-title>
-                  <ion-card-subtitle>cargo</ion-card-subtitle>
-                  <ion-card-content>celular</ion-card-content>
+                  <ion-card-title>Gonzalo Augusto Salgado cadavid</ion-card-title>
+                  <ion-card-subtitle>Desarrollador Front - End</ion-card-subtitle>
+                  <ion-card-content>
+                    Cel: 3188386080
+                    <!-- Email: gsalgado@grupoasd.com.co -->
+                  </ion-card-content>
+                </ion-card>
+                <ion-card class="card_experiencia">
+                  <ion-card-title>Jair Rojas Pineda</ion-card-title>
+                  <ion-card-subtitle>DevOps Engineer AWS</ion-card-subtitle>
+                  <ion-card-content>
+                    Cel: 3197604000
+                    <!-- Email: jrojpin@gmail.com -->
+                  </ion-card-content>
                 </ion-card>
               </div>
             </div>
