--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -64,33 +64,22 @@
                 <ion-button (click)="experience_jobs()">Trabajos</ion-button>
                 <ion-button (click)="experience_reference()" id="referencias">Referencias</ion-button>
               </div>
+
               <div id="cards_experiencia" *ngIf="experience_call === 'jobs'">
-                <ion-card class="card_experiencia">
-                  <ion-card-title>Sena</ion-card-title>
-                  <ion-card-subtitle> jun/2022 - dic/2023</ion-card-subtitle>
-                  <ion-card-content>Aprendiz</ion-card-content>
-                </ion-card>
-                <ion-card class="card_experiencia">
-                  <ion-card-title>Grupo-ASD</ion-card-title>
-                  <ion-card-subtitle> dic/2023 - jun/2024</ion-card-subtitle>
-                  <ion-card-content>Analista y dasarrollador de software</ion-card-content>
+                <ion-card class="card_experiencia" *ngFor="let job of jobs">
+                  <ion-card-title>{{ job.company }}</ion-card-title>
+                  <ion-card-subtitle>{{ job.period }}</ion-card-subtitle>
+                  <ion-card-content>{{ job.position }}</ion-card-content>
                 </ion-card>
               </div>
               <div id="cards_experiencia" *ngIf="experience_call === 'reference'">
-                <ion-card class="card_experiencia">
-                  <ion-card-title>Gonzalo Augusto Salgado cadavid</ion-card-title>
-                  <ion-card-subtitle>Desarrollador Front - End</ion-card-subtitle>
+                <ion-card *ngFor="let reference of references" class="card_experiencia">
+                  <ion-card-title>{{ reference.name }}</ion-card-title>
+                  <ion-card-subtitle>{{ reference.title }}</ion-card-subtitle>
                   <ion-card-content>
-                    Cel: 3188386080
-                    <!-- Email: gsalgado@grupoasd.com.co -->
-                  </ion-card-content>
-                </ion-card>
-                <ion-card class="card_experiencia">
-                  <ion-card-title>Jair Rojas Pineda</ion-card-title>
-                  <ion-card-subtitle>DevOps Engineer AWS</ion-card-subtitle>
-                  <ion-card-content>
-                    Cel: 3197604000
-                    <!-- Email: jrojpin@gmail.com -->
+                    Cel: {{ reference.phone }}
+                    <br>
+                    Email: {{ reference.email }}
                   </ion-card-content>
                 </ion-card>
               </div>
