--- a/front_angular/src/app/components/circle-data/circle-data.component.scss
+++ b/front_angular/src/app/components/circle-data/circle-data.component.scss
@@ -1,5 +1,26 @@
 /* circle-data.component.scss */
-#main {
+#body_graphic {
     width: 100%;
     height: 400px;
+    margin: 2%;
+    display: flex;
+    justify-content: center;
+    #main {
+        width: 30vw;
+        height: 30vw;
+        padding: 1%;
+    }
+}
+
+@media (max-width: 768px) {
+    #body_graphic {
+        height: 380px;
+        margin: 0.8%;
+        #main {
+            background: blue;
+            width: 100vw;
+            height: 70vw;
+            padding: 0%;
+        }
+    }
 }
