--- a/front_angular/src/app/components/circle-data/circle-data.component.scss
+++ b/front_angular/src/app/components/circle-data/circle-data.component.scss
@@ -15,12 +15,12 @@
 @media (max-width: 768px) {
     #body_graphic {
         height: 380px;
-        margin: 0.8%;
+        margin: 0%;
         #main {
-            background: blue;
-            width: 100vw;
+            background: red;
+            width: 100%;
             height: 70vw;
-            padding: 0%;
+            padding: 1%;
         }
     }
 }
