UPDATE: implement a funcional system

--- a/front_angular/src/app/git-hub/git-hub.page.html
+++ b/front_angular/src/app/git-hub/git-hub.page.html
@@ -109,10 +109,8 @@
 <ion-footer>
   <ion-toolbar>
     <div id="footer-icons">
-      <ion-icon name="mail-outline"></ion-icon>
-      <ion-icon name="logo-whatsapp"></ion-icon>
       <ion-icon name="home" (click)="goHome()"></ion-icon>
-      <ion-icon name="logo-linkedin" (click)="goLinkedin()"></ion-icon>
+      <ion-icon name="settings-outline" (click)="goSettings()"></ion-icon>
     </div>
   </ion-toolbar>
 </ion-footer>
