--- a/front_angular/src/app/home/home.page.html
+++ b/front_angular/src/app/home/home.page.html
@@ -23,10 +23,10 @@
           </ion-item>
           <div id="content_presentation" slot="content">
             <p>
-              Soy un analista y desarrollador de software con 2 años de experiencia en desarrollo frontend, utilizando frameworks como Ionic, AngularJS y ReactJS, así como lenguajes como HTML, CSS, JavaScript y TypeScript. <br>
-              Además, cuento con 1 año de experiencia en desarrollo backend, trabajando con frameworks como FastAPI y Express, y lenguajes como JavaScript y Python. También tengo experiencia en bases de datos relacionales como MySQL y no relacionales como MongoDB. <br>
+              Soy un analista y desarrollador de software con 2 años de experiencia en desarrollo frontend, backend, bases de datos y control de versiones<br>
               Me apasiona el aprendizaje continuo, enfrentar nuevos retos y resolver acertijos mentales. <br>
-              Colombiano con español nativo he ingles basico.
+              Colombiano con español nativo he ingles basico. <br>
+              cel: +57 317 249 6994 <br>
             </p>
             <app-echarts></app-echarts>
           </div>
@@ -131,10 +131,8 @@
 <ion-item>
   <ion-toolbar>
     <div id="footer-icons">
-      <ion-icon name="mail-outline"></ion-icon>
-      <ion-icon name="logo-whatsapp"></ion-icon>
       <ion-icon name="logo-github" (click)="goGitHub()"></ion-icon>
-      <ion-icon name="logo-linkedin" (click)="goLinkedin()"></ion-icon>
+      <ion-icon name="settings-outline" (click)="goSettings()"></ion-icon>
     </div>
   </ion-toolbar>
 </ion-item>
