--- a/front_angular/src/app/settings/settings.page.html
+++ b/front_angular/src/app/settings/settings.page.html
@@ -1,18 +1,20 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>linkedin</ion-title>
+    <ion-title>settings page</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  linkedin
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">settings page</ion-title>
+    </ion-toolbar>
+  </ion-header>
 </ion-content>
 
 <ion-item>
   <ion-toolbar>
     <div id="footer-icons">
-      <ion-icon name="mail-outline"></ion-icon>
-      <ion-icon name="logo-whatsapp"></ion-icon>
       <ion-icon name="logo-github" (click)="goGitHub()"></ion-icon>
       <ion-icon name="home" (click)="goHome()"></ion-icon>
     </div>
