--- a/front_angular/src/app/settings/settings.page.html
+++ b/front_angular/src/app/settings/settings.page.html
@@ -5,18 +5,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">settings page</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item>
+    <ion-label>Dark mode</ion-label>
+    <ion-toggle slot="end" (ionChange)="toggleTheme($event)"></ion-toggle>
+    <ion-icon [name]="iconName" slot="end"></ion-icon>
+  </ion-item>
 </ion-content>
 
-<ion-item>
+<ion-footer>
   <ion-toolbar>
     <div id="footer-icons">
       <ion-icon name="logo-github" (click)="goGitHub()"></ion-icon>
       <ion-icon name="home" (click)="goHome()"></ion-icon>
     </div>
   </ion-toolbar>
-</ion-item>
+</ion-footer>
