--- a/front_angular/src/app/settings/settings.page.scss
+++ b/front_angular/src/app/settings/settings.page.scss
@@ -1,3 +1,32 @@
+@mixin flex-center-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+#content{
+    height: 100%;
+    width: 100%;
+    @include flex-center-row;
+    ion-card{
+        width: 50%;
+        height: 50%;
+        display: flex;
+        align-items: center;
+        ion-label{
+            width: 100%;
+            height: 100%;
+            ion-icon{
+                width: 100%;
+                height: 100%;
+                color: aqua;
+            }
+        }
+    }
+}
+
 #footer-icons {
     display: flex;
     flex-direction: row;
@@ -9,6 +38,10 @@
 }
 
 @media (max-width: 768px) {
+    #content{
+        width: 50%;
+        height: 30%;
+    }
     #footer-icons {
         display: flex;
         flex-direction: row;
