--- a/front_angular/src/app/components/circle-data/circle-data.component.scss
+++ b/front_angular/src/app/components/circle-data/circle-data.component.scss
@@ -1,26 +1,21 @@
 /* circle-data.component.scss */
 #body_graphic {
     width: 100%;
-    height: 400px;
-    margin: 2%;
+    height: auto;
     display: flex;
     justify-content: center;
+    align-items: center;
     #main {
-        width: 30vw;
+        width: 50vw;
         height: 30vw;
-        padding: 1%;
     }
 }
 
 @media (max-width: 768px) {
     #body_graphic {
-        height: 380px;
-        margin: 0%;
         #main {
-            background: red;
-            width: 100%;
-            height: 70vw;
-            padding: 1%;
+            width: 100vw;
+            height: 30vh;
         }
     }
 }
